@@ -66,6 +66,7 @@ namespace WebCore {
         bool altKey() const { return m_altKey; }
         bool metaKey() const { return m_metaKey; }
 
+        static bool isMouseButtonDown(MouseButton);
 #if __APPLE__
         MouseEvent(NSEvent*);
 #endif
